# ai-agents-sandbox

./: .gitignore  CLAUDE.md  CLAUDE_NOTES.md  CODE_REVIEW.md  CONTRIBUTING.md  NOTES.md  README.md  TEST_REPORT.md  TODO.md  architecture.graphml  build.sh  docker-compose.yaml  install.sh  pyproject.toml
.claude/: settings.local.json
.devcontainer/: .env.example  .env.project  .gitignore  .tmux.conf  .zshrc  CLAUDE.md  Dockerfile  allowed-domains.example.txt  allowed-domains.txt  build_image.sh  devcontainer.json  dind-whitelist.txt  docker-compose.base.yaml  docker-compose.override.yaml  docker-compose.yaml  example.Dockerfile  init-firewall.sh  init-project.sh  init.secure.sh  initialize.sh  override.docker-proxy.yaml  override.generated.yaml  override.user.yaml  override.yaml  prepare_environment.sh  whitelist.txt
.devcontainer.base/: .p10k.zsh  docker-compose.yaml  init-firewall.sh  prepare_environment.sh
.devcontainer.example/: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  devcontainer.json  dind-whitelist.txt  docker-compose-extends.yaml  docker-compose.yaml  init-project.sh  initialize.sh  override.yaml  secure.init.sh.template  whitelist.txt
.devcontainer/tinyproxy/: filter  tinyproxy.conf
.github/workflows/: docker.yml  publish.yml  python-app.yml  release.yml  test.yml
.notifications/: notify.txt
common_settings/: CLAUDE.md  default-whitelist.txt
devcontainer_base/: CLAUDE.md  Dockerfile  default-whitelist.txt  entrypoint.sh
devcontainer_base/claude-defaults/: settings.json
devcontainer_base/conf/: .zshrc
devcontainer_base/scripts/: get-whitelist.sh  non-root-post-create.sh  setup-claude-defaults.sh  test-network.sh  test-permissions.sh
devcontainer_dockerfile_base/: Dockerfile  build_image.sh  default-allowed-domains.txt  init-firewall.sh  post-create.sh
devcontainer_dockerfile_base/scripts/: init-firewall.sh  non-root-post-create.sh  root-on-build-init.sh
docs/: ARCHITECTURE.md  CLAUDE_NOTES.md  CODEX_NOTES.md  DEVELOPMENT.md  PYCHARM.md  TODO.md  agents_team.graphml  architecture.graphml  teams_isolation.graphml
host/: CLAUDE.md  README.md  ai-sbx  ai-sbx-connect-task-worktree  ai-sbx-create-task-worktree  ai-sbx-init-project  ai-sbx-notify-watch  ai-sbx-remove-task-worktree  ai-sbx-task-worktree  claude-devcontainer  claude-notify-watch  claude-project-init  claude-task-worktree  claude-workspace-init  install.sh
host-scripts/: CLAUDE.md  README.md  notify-watch.sh
host/completions/: README.md  _ai-sbx  ai-sbx.bash
host/docker-proxy/: .env.example  README.md  ai-sbx-docker-proxy  docker-compose.yaml
host/templates/: docker-compose.base.yaml
images/: build.sh
images/base/: Dockerfile
images/common-settings/: CLAUDE.md  default-whitelist.txt
images/devcontainer-base/: CLAUDE.md  Dockerfile  entrypoint.sh
images/devcontainer-dotnet/: Dockerfile
images/devcontainer-golang/: Dockerfile
images/docker-dind/: Dockerfile
images/minimal/: Dockerfile
images/nodejs/: Dockerfile
images/python/: Dockerfile
images/tinyproxy-dind/: Dockerfile  entrypoint.sh
images/tinyproxy-extended/: CLAUDE.md  Dockerfile  entrypoint.sh
images/tinyproxy-registry/: Dockerfile  (+2 more)
templates/: .env.template  CLAUDE.md  Dockerfile.template  dind-whitelist.txt  docker-compose.base.yaml  initialize.sh
tests/: __init__.py  test_cli.py  test_config.py  test_image_commands.py  test_templates.py  test_utils.py
tinyproxy-dind/: Dockerfile  build.sh  entrypoint.sh  tinyproxy.conf
tinyproxy_extended/: CLAUDE.md  Dockerfile  entrypoint.sh  tinyproxy.conf
(+66 files in other folders)
